--- a/nginx/tools/han-zi-bu-shou.html
+++ b/nginx/tools/han-zi-bu-shou.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>汉字部首</title>
-<script src="../libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="../libs/jquery/jquery.min.js"></script>
 <script src="../libs/clipboard/2.0.4/clipboard.min.js"></script>
 
 <script>
@@ -534,7 +534,7 @@ window.onload = function(){
 </body>
 </html>
 
-<!-- CJK 偏旁部首增补 
+<!-- CJK 偏旁部首增补
 ⺁⺄⺈⺋⺌⺗⺧⺪⺮⺳⺶⺷⺻⻊
 -->
 
