--- a/nginx/tools/han-yu-pin-yin.html
+++ b/nginx/tools/han-yu-pin-yin.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>汉语拼音</title>
-<script src="../libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="../libs/jquery/jquery.min.js"></script>
 <script src="../libs/clipboard/2.0.4/clipboard.min.js"></script>
 
 <script>
